# Vext-platform

./: .env.backend.example  .env.example  .env.frontend.example  .env.game-server.example  .env.server.example  .gitignore  README.md  import.ts  package-lock.json  package.json  render.yaml
apps/game-server/: Cargo.toml  package.json
apps/game-server/src/: index.ts  main.rs
games/aether_strike/: Cargo.toml  GAME_GUIDE.md  README.md  server_config.txt  simulate_multiplayer.ts  vext.json
games/aether_strike/assets/character/dps/melee/: berserker.md  bloodstalker.md  lycan.md  vampire.md
games/aether_strike/assets/character/dps/ranged/: archer.md  huntress.md  mage.md  pyromancer.md  sorcerer.md  stormcaller.md
games/aether_strike/assets/character/support/ranged/: bard.md  necromancer.md
games/aether_strike/assets/character/tank/melee/: frostfang.md  guardian.md  juggernaut.md  (+2 more)
games/aether_strike/src/: assets.rs  backend.rs  class_system.rs  combat_system.rs  draw.rs  game.rs  input.rs  inventory.rs  launcher.rs  main..rs  main.rs  menu_system.rs  menu_ui.rs  network_api.rs  network_client.rs  network_handler.rs  network_protocol.rs  server.rs  waves.rs  world_renderer.rs
games/aether_strike/src/entities/: enemy.rs  mod.rs  stick_figure.rs
games/aether_strike/src/modules/: button.rs  character.rs  effect.rs  enemy_model.rs  host_ai.rs  lobby_ui.rs  mod.rs  online.rs  position.rs  turn.rs
games/aether_strike/src/systems/: combat.rs  mod.rs  movement.rs  spawner.rs
games/aether_strike/src/ui/: bag_passif.rs  buttons.rs  combat_menu.rs  hud.rs  mod.rs
(+426 files in other folders)
