[package]
name = "aether_strike"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rmp-serde = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0"
tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
url = "2.5"
